--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "ozaki25",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "apollo-server": "^2.11.0",
+    "graphql": "^14.6.0"
+  }
 }
