add apolloserver settings

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "author": "ozaki25",
   "license": "MIT",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "apollo-server": "^2.11.0",
     "graphql": "^14.6.0"
