--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apollo-server-sample",
+  "name": "apollo-server-baseball",
   "version": "1.0.0",
   "main": "index.js",
   "author": "ozaki25",
