--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "author": "ozaki25",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
     "apollo-server": "^2.11.0",
     "graphql": "^14.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
